--- a/Uconomy.csproj
+++ b/Uconomy.csproj
@@ -171,6 +171,7 @@
     <Compile Include="UconomyConfiguration.cs" />
     <Compile Include="Uconomy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Libraries\I18N.dll">
